fix border gap issue

--- a/styles.css
+++ b/styles.css
@@ -94,18 +94,21 @@ a {
 
 .card-container {
   width: 150px;
-  padding: 0;
-  margin: 0;
+  margin: 0px;
 }
 
 .card-container img {
   width:100%;
   height:150px;
   object-fit:cover;
+  border-radius: 7px;
 }
 
 .card {
-  border: 2px solid #2f2fd9;
+  display: flex;
+  border: 4px solid rgb(57, 12, 189);
+  border-radius: 12px;
+  box-sizing: border-box;
   /* box-shadow: 2px 4px 16px rgba(0,0,0,.06); */
   /* border-radius: 4px; */
   /* padding: 16px; */
